--- a/templates/Base.html
+++ b/templates/Base.html
@@ -6,25 +6,40 @@
 	<title>
 	Part Pick'r
 	</title>
-	<link rel="icon" type="image/png" href="./Assets/Title.png"/>
+	<link rel="icon" type="image/png" href="./static/Assets/Title.png"/>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='PersonalStyle.css') }}">
     <link rel='stylesheet' href='https://www.w3schools.com/w3css/4/w3.css'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+    <style>
+        .material-icons{
+            display: inline-flex;
+            vertical-align: middle;
+            font-size: 16px;
+        }
+    </style>
     <script src="{{ url_for('static', filename='jQuery.js') }}"></script>
 </head>
 <body style = "background-color: #151616; color: #ddd;">
 	<div class="w3-top">
-	<div class="w3-bar w3-dark" style = "background-color: #282e34;color: #ddd;">
+	<div id="navbar" class="w3-bar w3-dark" style = "background-color: #282e34;color: #ddd;">
 		<a href="/home" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small w3-wide">Part Pick'r</a>
-		<a href="/home" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small">Home</a>
-		<a href="/build" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small">Build</a>
-		<a href="#" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small">About Us</a>
-		<a href="#" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small">Contact</a>
+		<a href="/home" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small"><i class="material-icons">home</i> Home</a>
+		<a href="/build" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small"><i class="material-icons">build</i> Build</a>
+		<a href="#" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small"><i class="material-icons">info</i> About Us</a>
+		<a href="#" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small"><i class="material-icons">email</i> Contact</a>
+        {% if not session['logged_in'] %}
 		<button id="loginModalBtn" type="button" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small w3-right">Login</button>
 		<button id="signupModalBtn" type="button" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small w3-right">SignUp</button>
-		<a href="javascript:void(0)" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-right w3-hide-large w3-hide-medium" onclick="myFunction()">&#9776;</a>
+        <button id="profileBtn" style="display:none;" type="button" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-right"></button>
+        {% else %}
+        <button id="loginModalBtn" style="display:none;" type="button" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small w3-right">Login</button>
+		<button id="signupModalBtn" style="display:none;" type="button" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-hide-small w3-right">SignUp</button>
+        <button id="profileBtn" type="button" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-right"><i class="fa fa-user-circle"></i> {{session['name']}}</button>
+        {% endif %}
+        <a href="javascript:void(0)" class="w3-bar-item w3-button w3-ripple w3-text-white w3-hover-teal w3-right w3-hide-large w3-hide-medium" onclick="myFunction()">&#9776;</a>
 	</div>
 
 	<div id="demo" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-hide-medium">
@@ -43,7 +58,7 @@
             <form class="w3-container" id="loginForm">
 
                 <label class="w3-text-teal">Email</label>
-                <input class="w3-input" type="text" name="Username">
+                <input class="w3-input" type="text" name="Email">
 
                 <label class="w3-text-teal">Password</label>
                 <input class="w3-input" type="password" name="Password">
@@ -72,7 +87,7 @@
                 <input class="w3-input" type="text" name="Age">
 
                 <label class="w3-text-teal">Email</label>
-                <input class="w3-input" type="text" name="Username">
+                <input class="w3-input" type="text" name="Email">
 
                 <label class="w3-text-teal">Password</label>
                 <input class="w3-input" type="password" name="Password">
@@ -83,6 +98,43 @@
                     <a href="#" class="w3-text-dark-grey" onclick="toggleSignupModal();toggleLoginModal();">  Already have an account?</a>
                 </div>
             </form>
+            <br>
+        </div>
+    </div>
+
+    <div class="w3-modal" id="profileModal">
+        <div class="w3-modal-content w3-animate-top w3-card-4 w3-padding-large" style="width: 75%">
+
+            <h3 class="w3-wide w3-text-black w3-center">Welcome User!</h3>
+            <span class="w3-button w3-black w3-xlarge w3-hover-red w3-display-topright" onclick="toggleProfileModal()">&times;</span>
+            <div class="w3-row  w3-content w3-padding" id="profileDetails">
+                <div class="w3-col m4">
+                    <img class="w3-img w3-circle w3-hover-opacity" src="./static/Assets/Cafe_logo.jpg">
+                </div>
+                <div class="w3-col m8">
+                    <form class="w3-container" id="profileForm">
+
+                        <label class="w3-text-teal">Name</label>
+                        <input class="w3-input" type="text" name="Name" value="{{session['name']}}">
+
+                        <label class="w3-text-teal">Age</label>
+                        <input class="w3-input" type="text" name="Age" value="{{session['age']}}">
+
+                        <label class="w3-text-teal">Email</label>
+                        <input class="w3-input" type="text" name="Email" value="{{session['email']}}" readonly>
+
+                        <label class="w3-text-teal">Password</label>
+                        <input class="w3-input" type="password" name="Password">
+
+                        <br>
+                        <div class="w3-container w3-center w3-padding-large">
+                            <button class="w3-btn w3-black" type=button style="width: 25%" id="saveBtn">Save changes</button>
+                            <button class="w3-button w3-center w3-black w3-hover-red" type=button id="logoutBtn">Logout</button>
+                        </div>
+                        <br><br>
+                    </form>
+                </div>
+            </div>
             <br>
         </div>
     </div>
